# image_grpc

./: CMakeLists.txt
client/: CMakeLists.txt  impl.cpp  impl.h  main.cpp
protos/: CMakeLists.txt
protos/proto/: image_process.proto
server/: CMakeLists.txt  image_process_impl.cpp  image_process_impl.h  main.cpp  processor.cpp  processor.h
